fix text overlapping with navbar

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -8,7 +8,8 @@ nav-bar {
     justify-content: space-between;
     padding: 15px 10%;
     border-bottom: 1px solid #000;
-    z-index: 10;
+    z-index: 1000;
+    background: #fff;
 }
 
 .container {
